--- a/boto.html
+++ b/boto.html
@@ -1,10 +1,28 @@
-<!DOCTYPE html>
+<!DOCTYPE html>   <!--forst mobile design after deskto design-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="x-ua-compatible" content="IE-edge">
+    <meta name="viewport" content="devis=device-width, initial-scale=1.0" >
     <title>botostart</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-forst mobile design after deskto design
+<header>
+    <h1>BootStart</h1>
+    <nav>
+        <ul class="main-nav">
+            <li><a href="#">Home page</a></li>
+            <li><a href="#">Produce</a></li>
+            <li><a href="#">Books</a></li>
+            <li><a href="#">Login</a></li>
+        </ul>
+    </nav>
+    <div class="hamburger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+</header>
 </body>
 </html>
