final learning boto

--- a/boto.html
+++ b/boto.html
@@ -24,5 +24,9 @@
         <span></span>
     </div>
 </header>
+<main>
+    <article class="first"></article>
+    <article class="second"></article>
+</main>
 </body>
 </html>
